# Kaffemaskin

./: .gitignore  CMakeLists.txt  README.md  gpio_object.c  gpio_object.h  gui.html  lwm2mclient.c  setup_and_build.sh
GUI/: espresso_remote.html  server.py
leshan-configs/: 26241.xml
src/: gpio_object.c  main.c
